gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test15785b.d
version https://git-lfs.github.com/spec/v1
oid sha256:4596ca950dcb7cddaa64342665007cb4dbbd1e25c7bc1397c162299020c66df5
size 507
